refactoring and added a new web page for providing client configs

--- a/templates/env_multi.j2
+++ b/templates/env_multi.j2
@@ -25,6 +25,9 @@ VMESS_GRPC_SERVICE={{ vmess_grpc_service }}
 VLESS_GRPC_SERVICE={{ vless_grpc_service }}
 TROJAN_GRPC_SERVICE={{ trojan_grpc_service }}
 
+# Секретная страница конфигураций
+SECRET_CONFIG_PATH={{ secret_config_path }}
+
 # Настройки логирования
 LOG_LEVEL={{ log_level }}
 ENABLE_STATS={{ enable_stats }}
