refactoring and added a new web page for providing client configs

--- a/templates/config_page.html.j2
+++ b/templates/config_page.html.j2
@@ -260,12 +260,12 @@
                         <div class="config-item">
                             <h4>WebSocket</h4>
                             <p>Лучшая совместимость с мобильными приложениями</p>
-                            <a href="/configs/vmess_ws.json" class="download-btn" download>Скачать JSON</a>
+                            <a href="vmess_ws.json" class="download-btn" download>Скачать JSON</a>
                         </div>
                         <div class="config-item">
                             <h4>gRPC</h4>
                             <p>Оптимизирован для стабильности</p>
-                            <a href="/configs/vmess_grpc.json" class="download-btn" download>Скачать JSON</a>
+                            <a href="vmess_grpc.json" class="download-btn" download>Скачать JSON</a>
                         </div>
                     </div>
                 </div>
@@ -279,12 +279,12 @@
                         <div class="config-item">
                             <h4>WebSocket</h4>
                             <p>Минимальные накладные расходы</p>
-                            <a href="/configs/vless_ws.json" class="download-btn" download>Скачать JSON</a>
+                            <a href="vless_ws.json" class="download-btn" download>Скачать JSON</a>
                         </div>
                         <div class="config-item">
                             <h4>gRPC</h4>
                             <p>Современный протокол передачи</p>
-                            <a href="/configs/vless_grpc.json" class="download-btn" download>Скачать JSON</a>
+                            <a href="vless_grpc.json" class="download-btn" download>Скачать JSON</a>
                         </div>
                     </div>
                 </div>
@@ -298,12 +298,12 @@
                         <div class="config-item">
                             <h4>WebSocket</h4>
                             <p>Имитирует HTTPS трафик</p>
-                            <a href="/configs/trojan_ws.json" class="download-btn" download>Скачать JSON</a>
+                            <a href="trojan_ws.json" class="download-btn" download>Скачать JSON</a>
                         </div>
                         <div class="config-item">
                             <h4>gRPC</h4>
                             <p>Высокая производительность</p>
-                            <a href="/configs/trojan_grpc.json" class="download-btn" download>Скачать JSON</a>
+                            <a href="trojan_grpc.json" class="download-btn" download>Скачать JSON</a>
                         </div>
                     </div>
                 </div>
