--- a/templates/env_multi.j2
+++ b/templates/env_multi.j2
@@ -1,37 +1,37 @@
-# Основные настройки
+# Main settings
 DOMAIN={{ domain }}
 SERVER_IP={{ server_ip }}
 EMAIL={{ email }}
 
-# UUID для протоколов
+# UUIDs for protocols
 VMESS_UUID={{ vmess_uuid }}
 VLESS_UUID={{ vless_uuid }}
 
-# Пароль для Trojan
+# Password for Trojan
 TROJAN_PASSWORD={{ trojan_password }}
 
-# Пути для WebSocket
+# Paths for WebSocket
 VMESS_WS_PATH={{ vmess_ws_path }}
 VLESS_WS_PATH={{ vless_ws_path }}
 TROJAN_WS_PATH={{ trojan_ws_path }}
 
-# Пути для gRPC
+# Paths for gRPC
 VMESS_GRPC_PATH={{ vmess_grpc_path }}
 VLESS_GRPC_PATH={{ vless_grpc_path }}
 TROJAN_GRPC_PATH={{ trojan_grpc_path }}
 
-# Сервисы для gRPC
+# Services for gRPC
 VMESS_GRPC_SERVICE={{ vmess_grpc_service }}
 VLESS_GRPC_SERVICE={{ vless_grpc_service }}
 TROJAN_GRPC_SERVICE={{ trojan_grpc_service }}
 
-# Секретная страница конфигураций
+# Secret configuration page
 SECRET_CONFIG_PATH={{ secret_config_path }}
 
-# Настройки логирования
+# Logging settings
 LOG_LEVEL={{ log_level }}
 ENABLE_STATS={{ enable_stats }}
 
-# Docker настройки
+# Docker settings
 UID={{ uid }}
-GID={{ gid }} 
+GID={{ gid }}
