--- a/templates/nginx_custom.conf.j2
+++ b/templates/nginx_custom.conf.j2
@@ -1,4 +1,4 @@
-# VPN маршруты - VMess WebSocket
+# VPN routes - VMess WebSocket
 location {{ vmess_ws_path }} {
     if ($http_upgrade != "websocket") {
         return 404;
@@ -15,7 +15,7 @@ location {{ vmess_ws_path }} {
     proxy_read_timeout 52w;
 }
 
-# VPN маршруты - VLESS WebSocket
+# VPN routes - VLESS WebSocket
 location {{ vless_ws_path }} {
     if ($http_upgrade != "websocket") {
         return 404;
@@ -32,7 +32,7 @@ location {{ vless_ws_path }} {
     proxy_read_timeout 52w;
 }
 
-# VPN маршруты - Trojan WebSocket
+# VPN routes - Trojan WebSocket
 location {{ trojan_ws_path }} {
     if ($http_upgrade != "websocket") {
         return 404;
@@ -49,7 +49,7 @@ location {{ trojan_ws_path }} {
     proxy_read_timeout 52w;
 }
 
-# VPN маршруты - VMess gRPC
+# VPN routes - VMess gRPC
 location {{ vmess_grpc_path }} {
     grpc_pass grpc://xray-server:10011;
     grpc_set_header Host $host;
@@ -58,7 +58,7 @@ location {{ vmess_grpc_path }} {
     grpc_set_header X-Forwarded-Proto $scheme;
 }
 
-# VPN маршруты - VLESS gRPC
+# VPN routes - VLESS gRPC
 location {{ vless_grpc_path }} {
     grpc_pass grpc://xray-server:10012;
     grpc_set_header Host $host;
@@ -67,7 +67,7 @@ location {{ vless_grpc_path }} {
     grpc_set_header X-Forwarded-Proto $scheme;
 }
 
-# VPN маршруты - Trojan gRPC
+# VPN routes - Trojan gRPC
 location {{ trojan_grpc_path }} {
     grpc_pass grpc://xray-server:10013;
     grpc_set_header Host $host;
@@ -76,6 +76,6 @@ location {{ trojan_grpc_path }} {
     grpc_set_header X-Forwarded-Proto $scheme;
 }
 
-# Секретная страница конфигураций - будет обрабатываться через прокси
-# Для прямого доступа к статическим файлам через nginx-proxy
-# Этот файл будет включен в location / блок nginx-proxy 
+# Secret configuration page - will be processed via proxy
+# For direct access to static files via nginx-proxy
+# This file will be included in the nginx-proxy location / block
